Ajustes en estilos de las vistas

--- a/Proyeto.GestionRepuestos.MVC/Proyeto.GestionRepuestos.MVC.csproj
+++ b/Proyeto.GestionRepuestos.MVC/Proyeto.GestionRepuestos.MVC.csproj
@@ -264,7 +264,6 @@
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
-    <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
@@ -280,6 +279,7 @@
     <Content Include="Views\Repuestos\Entregar.cshtml" />
     <Content Include="Views\Repuestos\Solicitar.cshtml" />
     <Content Include="Views\Repuestos\AdministrarSolicitudes.cshtml" />
+    <Content Include="Views\Repuestos\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
